--- a/raspberry/requirements.txt
+++ b/raspberry/requirements.txt
@@ -69,6 +69,7 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 platformdirs==4.3.6
+playsound==1.3.0
 primp==0.9.2
 propcache==0.2.1
 protobuf==5.29.2
@@ -101,6 +102,7 @@ tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.31.0
 tensorflow_intel==2.18.0
 termcolor==2.5.0
+tf_keras==2.18.0
 tinycss2==1.4.0
 tqdm==4.67.1
 typing_extensions==4.12.2
